--- a/scss/bootstrap-3/_form-controls.scss
+++ b/scss/bootstrap-3/_form-controls.scss
@@ -2,21 +2,22 @@
 #controls > div {
   padding-bottom: $form-group-margin-bottom;
 }
-div.form-group {
-  p.inline-error {
-    margin-left: 0;
-  }
-  /* Removes last-child reset to zero in default theme overrides. */
-  &:last-child {
-    margin-bottom: $form-group-margin-bottom;
-  }
-  input[type="checkbox"] {
-    margin-left: 8px;
-    margin-right: 8px;
-    font-size: 150%;
+#entry_form, .indicia-entry-form {
+  div.form-group {
+    p.inline-error {
+      margin-left: 0;
+    }
+    /* Removes last-child reset to zero in default theme overrides. */
+    &:last-child {
+      margin-bottom: $form-group-margin-bottom;
+    }
+    input[type="checkbox"] {
+      margin-left: 8px;
+      margin-right: 8px;
+      font-size: 150%;
+    }
   }
 }
-
 /*
 Although we don't want to allow control-width classes to override Bootstrap
 behaviour, the Edit tab of Indicia pages doesn't load using Bootstrap so we
